; ModuleID = '/home/carl/AnghaBench/oss-fuzz/projects/zlib/extr_compress_fuzzer.c_write_zlib_header.c'
source_filename = "/home/carl/AnghaBench/oss-fuzz/projects/zlib/extr_compress_fuzzer.c_write_zlib_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@Z_DEFLATED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @write_zlib_header to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @write_zlib_header(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  store i32 0, i32* %3, align 4
  store i32 8, i32* %4, align 4
  %6 = load i32, i32* @Z_DEFLATED, align 4
  %7 = load i32, i32* %4, align 4
  %8 = sub i32 %7, 8
  %9 = shl i32 %8, 4
  %10 = add i32 %6, %9
  %11 = shl i32 %10, 8
  store i32 %11, i32* %5, align 4
  %12 = load i32, i32* %3, align 4
  %13 = shl i32 %12, 6
  %14 = load i32, i32* %5, align 4
  %15 = or i32 %14, %13
  store i32 %15, i32* %5, align 4
  %16 = load i32, i32* %5, align 4
  %17 = urem i32 %16, 31
  %18 = sub i32 31, %17
  %19 = load i32, i32* %5, align 4
  %20 = add i32 %19, %18
  store i32 %20, i32* %5, align 4
  %21 = load i32*, i32** %2, align 8
  %22 = load i32, i32* %5, align 4
  %23 = lshr i32 %22, 8
  %24 = trunc i32 %23 to i8
  %25 = call i32 @put_byte(i32* %21, i32 0, i8 zeroext %24)
  %26 = load i32*, i32** %2, align 8
  %27 = load i32, i32* %5, align 4
  %28 = and i32 %27, 255
  %29 = trunc i32 %28 to i8
  %30 = call i32 @put_byte(i32* %26, i32 1, i8 zeroext %29)
  ret void
}

declare dso_local i32 @put_byte(i32*, i32, i8 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
